...
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="choose_the_date_of_tracking">Please choose the date of tracking</string>
    <string name="ok">OK</string>
    <string name="required_email">Required email</string>
    <string name="required_password">Required password</string>
    <string name="authentication_successful">Authentication successful</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="sign_out_successful">Sign out successful</string>
    <string name="user_with_email">\"User with email: \"</string>
    <string name="was_signed_up">\" was signed up\"</string>
    <string name="signing_up_failed">Signing up failed</string>
    <string name="there_is_no_track">There is no track for chosen date</string>
    <string name="you_havent_sign_in">You haven\'t sign in yet</string>
...
