...
        app:layout_constraintEnd_toEndOf="@+id/tvChooseTheWayOfSigning"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/tvChooseTheWayOfSigning"
        app:layout_constraintTop_toBottomOf="@+id/tvChooseTheWayOfSigning" />

    <Button
        android:id="@+id/btnPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_margin_start_large"
        android:layout_marginTop="@dimen/button_margin_top_normal"
        android:layout_marginEnd="@dimen/button_margin_end"
        android:backgroundTint="@color/blue"
...
